Fix overflow bug

--- a/src/www/styles.less
+++ b/src/www/styles.less
@@ -1338,6 +1338,10 @@ main-wiki {
     font-family: 'Open Sans',
     sans-serif;
     color: #161616;
+
+    &.overflow {
+        overflow: auto;
+    }
 }
 
 footer {
